--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"axios": "^0.20.0",
-		"classnames": "^2.2.6",
+		"import": "0.0.6",
+		"js-md5": "^0.7.3",
 		"jwt-decode": "^3.0.0",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
@@ -17,7 +18,8 @@
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "3.4.3",
 		"redux": "^4.0.5",
-		"redux-thunk": "^2.3.0"
+		"redux-thunk": "^2.3.0",
+		"regenerator-runtime": "^0.13.7"
 	},
 	"scripts": {
 		"start": "react-scripts start",
